--- a/_config.yml
+++ b/_config.yml
@@ -257,7 +257,7 @@ defaults:
       related: true
   # _pages
   - scope:
-      path: "_pages"
+      path: ""
       type: pages
     values:
       layout: single
