--- a/_config.yml
+++ b/_config.yml
@@ -52,16 +52,16 @@ reCaptcha:
 atom_feed:
   path                   : # blank (default) uses feed.xml
 search                   : true # true, false (default)
-search_full_content      : false # true, false (default)
-search_provider          : lunr # lunr (default), algolia, google
+search_full_content      : # true, false (default)
+search_provider          : google # lunr (default), algolia, google
 algolia:
   application_id         : # YOUR_APPLICATION_ID
   index_name             : # YOUR_INDEX_NAME
   search_only_api_key    : # YOUR_SEARCH_ONLY_API_KEY
   powered_by             : # true (default), false
 google:
-  search_engine_id       : # YOUR_SEARCH_ENGINE_ID
-  instant_search         : # false (default), true
+  search_engine_id       : 3863343b1dc2242f3 # YOUR_SEARCH_ENGINE_ID
+  instant_search         : false # false (default), true
 # SEO Related
 google_site_verification :
 bing_site_verification   :
