--- a/_config.yml
+++ b/_config.yml
@@ -85,10 +85,10 @@ social:
 
 # Analytics
 analytics:
-  provider               : false # false (default), "google", "google-universal", "google-gtag", "custom"
+  provider               : google-universal # false (default), "google", "google-universal", "google-gtag", "custom"
   google:
-    tracking_id          :
-    anonymize_ip         : # true, false (default)
+    tracking_id          : "G-JGB5C32KXB"
+    anonymize_ip         : false # true, false (default)
 
 
 # Site Author
