--- a/_data/ui-text.yml
+++ b/_data/ui-text.yml
@@ -76,19 +76,19 @@ mk: &DEFAULT_MK
   toc_label                  : "На оваа страница"
   ext_link_label             : "Директен линк"
   less_than                  : "помалку од"
-  minute_read                : "minute read"
+  minute_read                : "мин."
   share_on_label             : "Сподели"
   meta_label                 :
-  tags_label                 : "Tags:"
+  tags_label                 : "Тагови:"
   categories_label           : "Категории:"
-  date_label                 : "Updated:"
+  date_label                 : "Објавено на:"
   comments_label             : "Остави коментар"
   comments_title             : "Коментари"
   more_label                 : "Дознај повеќе"
   related_label              : "Поврзано"
   follow_label               : "Follow:"
   feed_label                 : "RSS"
-  powered_by                 : "Powered by"
+  powered_by                 : "Создадено со"
   website_label              : "Интернет страница"
   email_label                : "Email"
   recent_posts               : "Најнови објави"
