--- a/_data/ui-text.yml
+++ b/_data/ui-text.yml
@@ -86,11 +86,11 @@ mk: &DEFAULT_MK
   comments_title             : "Коментари"
   more_label                 : "Дознај повеќе"
   related_label              : "Поврзано"
-  follow_label               : "Follow:"
+  follow_label               : "Следете нè:"
   feed_label                 : "RSS"
   powered_by                 : "Создадено со"
   website_label              : "Интернет страница"
-  email_label                : "Следете нè"
+  email_label                : "Email"
   recent_posts               : "Најнови објави"
   undefined_wpm              : "Недефиниран words_per_minute параметар во _config.yml"
   comment_form_info          : "Важата email адреса нема да биде објавена. Задолжителните полиња се обележани"
