--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,6 +2,8 @@
 main:
   - title: "За нас"
     url: /about/
+  - title: "Блог"
+    url: /blog/
   - title: "Архива"
     url: /year-archive/
   # - title: "Sample Collections"
